# contact-transfer-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 001_init.sql
src/: config.rs  db.rs  email.rs  errors.rs  handlers.rs  main.rs  models.rs
src/config/: mod.rs
src/domain/: mod.rs
src/email/: mod.rs  provider.rs  resend.rs  templates.rs
src/handlers/: export_fiches.rs  health.rs  history.rs  mod.rs
src/middleware/: mod.rs
