[package]
name = "contact_transfer_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
lettre = { version = "0.11.19", features = ["smtp", "builder"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
jsonwebtoken = "9"
bcrypt = "0.15"
csv = "1.3"
pdf = "0.8"
tracing = "0.1"
tracing-subscriber ="0.3"
config = "0.13"

[profile.release]
opt-level = 3
lto = true
