[package]
name = "smp-backend"
version = "1.0.0"
edition = "2021"
authors = ["SMP Moules"]
description = "Backend API pour l'application SMP Moules"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Environment & config
dotenvy = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
